--- a/package.json
+++ b/package.json
@@ -10,11 +10,21 @@
       "preview": "vite preview"
    },
    "dependencies": {
+      "@tanstack/react-query": "^5.17.7",
+      "@tanstack/react-query-devtools": "^5.17.7",
+      "@types/react-router-hash-link": "^2.4.9",
+      "dotenv": "^16.3.1",
       "react": "^18.2.0",
+      "react-cookie": "^7.0.1",
       "react-dom": "^18.2.0",
-      "react-router-dom": "^6.21.1"
+      "react-router-dom": "^6.21.1",
+      "react-router-hash-link": "^2.4.3",
+      "react-toastify": "^9.1.3",
+      "svgo": "^3.2.0"
    },
    "devDependencies": {
+      "@tanstack/eslint-plugin-query": "^5.17.7",
+      "@types/node": "^20.10.6",
       "@types/react": "^18.2.37",
       "@types/react-dom": "^18.2.15",
       "@typescript-eslint/eslint-plugin": "^6.10.0",
@@ -28,7 +38,7 @@
       "prettier": "^3.1.0",
       "prettier-plugin-tailwindcss": "^0.5.7",
       "tailwindcss": "^3.3.5",
-      "typescript": "^5.2.2",
+      "typescript": "^4.9.5",
       "vite": "^5.0.0"
    }
 }
