--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
       "@tanstack/react-query": "^5.17.7",
       "@tanstack/react-query-devtools": "^5.17.7",
       "@types/react-router-hash-link": "^2.4.9",
+      "date-fns": "^3.2.0",
       "dotenv": "^16.3.1",
       "react": "^18.2.0",
       "react-cookie": "^7.0.1",
